samples/_failures_safe/1761663181_c6a445_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_85383d02.c: In function ‘main’:
./samples/SAFE/__tmp_85383d02.c:152:16: error: missing terminating " character
  152 |         printf("\n
      |                ^~~
./samples/SAFE/__tmp_85383d02.c:152:9: error: expected expression at end of input
  152 |         printf("\n
      |         ^~~~~~
./samples/SAFE/__tmp_85383d02.c:152:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_85383d02.c:152:9: error: expected declaration or statement at end of input
